--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
-    <div id="root"></div>
+    <div id="app"></div>
       <script src="../dist/bundle.js"></script>
     <!--
       This HTML file is a template.
